--- a/HTML/Israeli_page.html
+++ b/HTML/Israeli_page.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Master's page</title>
-    <link rel="stylesheet" href="CSS\navbar.css">
-    <link rel="stylesheet" href="CSS\Recipes_page.css">
+    <link rel="stylesheet" href="/CSS/navbar.css">
+    <link rel="stylesheet" href="/CSS/Recipes_page.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <script src="https://kit.fontawesome.com/82bc52e7cb.js" crossorigin="anonymous"></script>
@@ -28,18 +28,18 @@
                     <input type="checkbox" id="checkbox_toggle" />
                     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
                     <div class="menu">
-                        <li><a href="index.php">Home</a></li>
-                        <li><a href="index.php#Idea">Idea</a></li>
-                        <li><a href="index.php#About">About Us</a></li>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/index.html#Idea">Idea</a></li>
+                        <li><a href="/index.html#About">About Us</a></li>
                         <li class="services">
                             <a>Recipes</a>
                             <ul class="dropdown1">
-                                <li><a href="Mexican_page.html">Mexican</a></li>
-                                <li><a href="Italian_page.html">Italian</a></li>
-                                <li><a href="Israeli_page.html">Israeli</a></li>
+                                <li><a href="/HTML/Mexican_page.html">Mexican</a></li>
+                                <li><a href="/HTML/Italian_page.html">Italian</a></li>
+                                <li><a href="/HTML/Israeli_page.html">Israeli</a></li>
                             </ul>
                         </li>
-                        <li><a href="Tips_page.html">Tips</a></li>
+                        <li><a href="/HTML/Tips_page.html">Tips</a></li>
                     </div>
                 </ul>
             </nav>
@@ -55,7 +55,7 @@
                     <p> The word 'Arais' is a plural version of 'arus', a bride in Arabic. The origin of the name is in Arab countries and certain tribes where this dish was used to be served in honor of newlyweds. The pita is cut in half, stuffed with meat, then grilled well. </p>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\recipes\Arais.jpeg" alt="main picture" height="700">   
+                    <img class="img-me" src="/images\recipes\Arais.jpeg" alt="main picture" height="700">   
                 </div>
             </div>
         </div>
@@ -65,17 +65,17 @@
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Ingridients.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Ingridients.jpeg" alt="main picture">   
                     <h6>Ingredients</h6> 
                     <p>14</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Time.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Time.jpeg" alt="main picture">   
                     <h6>Total time</h6>
                     <p>20 min</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Difficulty.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Difficulty.jpeg" alt="main picture">   
                     <h6>Difficulty</h6> 
                     <p>Easy</p>
                 </div>
@@ -88,7 +88,7 @@
     <div class="accordion accordion_margin" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" 
+            <button class="accordion-button collapsed" type="button" 
             data-bs-toggle="collapse" data-bs-target="#collapseOne" 
             aria-expanded="false" aria-controls="collapseOne">
                 Ingredients
@@ -116,7 +116,7 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingTwo">
-              <button class="accordion-button" type="button" 
+              <button class="accordion-button collapsed" type="button" 
               data-bs-toggle="collapse" data-bs-target="#collapseTwo" 
               aria-expanded="false" aria-controls="collapseTwo">
               preparation method
@@ -145,7 +145,7 @@
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\recipes\Pita Sabich.jpeg" alt="main picture" height="700">   
+                    <img class="img-me" src="/images\recipes\Pita Sabich.jpeg" alt="main picture" height="700">   
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <h1>Pita Sabich</h1>
@@ -159,17 +159,17 @@
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Ingridients.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Ingridients.jpeg" alt="main picture">   
                     <h6>Ingredients</h6> 
                     <p>20</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Time.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Time.jpeg" alt="main picture">   
                     <h6>Total time</h6>
                     <p>35 min</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Difficulty.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Difficulty.jpeg" alt="main picture">   
                     <h6>Difficulty</h6> 
                     <p>medium</p>
                 </div>
@@ -182,7 +182,7 @@
     <div class="accordion accordion_margin" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="heading3">
-            <button class="accordion-button" type="button" 
+            <button class="accordion-button collapsed" type="button" 
             data-bs-toggle="collapse" data-bs-target="#collapse3" 
             aria-expanded="false" aria-controls="collapse3">
                 Ingredients
@@ -223,7 +223,7 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="heading4">
-              <button class="accordion-button" type="button" 
+              <button class="accordion-button collapsed" type="button" 
               data-bs-toggle="collapse" data-bs-target="#collapse4" 
               aria-expanded="false" aria-controls="collapse4">
               preparation method
@@ -262,7 +262,7 @@
                     <p>A hamantash is a Jewish triangular filled-pocket pastry, associated with the Jewish holiday of Purim. The name refers to Haman, the villain in the Purim story.</p>
                 </div>
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\recipes\Black&White Hamantash.jpeg" alt="main picture" height="700">   
+                    <img class="img-me" src="/images\recipes\Black&White Hamantash.jpeg" alt="main picture" height="700">   
                 </div>
             </div>
         </div>
@@ -272,17 +272,17 @@
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Ingridients.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Ingridients.jpeg" alt="main picture">   
                     <h6>Ingredients</h6> 
                     <p>10</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Time.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Time.jpeg" alt="main picture">   
                     <h6>Total time</h6>
                     <p>45 min</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Difficulty.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Difficulty.jpeg" alt="main picture">   
                     <h6>Difficulty</h6> 
                     <p>medium</p>
                 </div>
@@ -295,7 +295,7 @@
     <div class="accordion accordion_margin" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="heading5">
-            <button class="accordion-button" type="button" 
+            <button class="accordion-button collapsed" type="button" 
             data-bs-toggle="collapse" data-bs-target="#collapse5" 
             aria-expanded="false" aria-controls="collapse5">
                 Ingredients
@@ -325,7 +325,7 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="heading6">
-              <button class="accordion-button" type="button" 
+              <button class="accordion-button collapsed" type="button" 
               data-bs-toggle="collapse" data-bs-target="#collapse6" 
               aria-expanded="false" aria-controls="collapse6">
               preparation method
@@ -361,7 +361,7 @@
         <div class="container-fluid">
             <div class="row rowwidth">
                 <div class="col-lg-6 col-md-12">
-                    <img class="img-me" src="images\recipes\Arak Attack.jpeg" alt="main picture" height="700">   
+                    <img class="img-me" src="/images\recipes\Arak Attack.jpeg" alt="main picture" height="700">   
                 </div>
                 <div class="col-lg-6 col-md-12">
                     <h1>Arak Attack</h1>
@@ -375,17 +375,17 @@
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Ingridients.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Ingridients.jpeg" alt="main picture">   
                     <h6>Ingredients</h6> 
                     <p>3</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Time.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Time.jpeg" alt="main picture">   
                     <h6>Total time</h6>
                     <p>5 min</p>
                 </div>
                 <div class="col-xl-4 col-lg-12 col-md-12 box">
-                    <img class="img-me" src="images\Difficulty.jpeg" alt="main picture">   
+                    <img class="img-me" src="/images\Difficulty.jpeg" alt="main picture">   
                     <h6>Difficulty</h6> 
                     <p>Easy</p>
                 </div>
@@ -398,7 +398,7 @@
     <div class="accordion accordion_margin" id="Description">
         <div class="accordion-item">
           <h2 class="accordion-header" id="heading7">
-            <button class="accordion-button" type="button" 
+            <button class="accordion-button collapsed" type="button" 
             data-bs-toggle="collapse" data-bs-target="#collapse7" 
             aria-expanded="false" aria-controls="collapse7">
                 Ingredients
@@ -415,7 +415,7 @@
         </div>
         <div class="accordion-item">
             <h2 class="accordion-header" id="heading8">
-              <button class="accordion-button" type="button" 
+              <button class="accordion-button collapsed" type="button" 
               data-bs-toggle="collapse" data-bs-target="#collapse8" 
               aria-expanded="false" aria-controls="collapse8">
               preparation method
