--- a/HTML/Tips_page.html
+++ b/HTML/Tips_page.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tips Page</title>
-    <link rel="stylesheet" href="CSS\navbar.css">
-    <link rel="stylesheet" href="CSS\Tips_page_style.css">
+    <link rel="stylesheet" href="/CSS/navbar.css">
+    <link rel="stylesheet" href="/CSS/Tips_page_style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -18,13 +18,14 @@
             const form = new FormData(document.getElementById('TipsForm'));
             form.append("TipName", JSON.parse(window.sessionStorage.getItem("tip")).TipName);
             form.append("Rate", JSON.parse(window.sessionStorage.getItem("tip")).Rate);
-            const req = new Request('/index.php');
+            const req = new Request('/PHP/index.php');
             fetch(req, {
                 method: 'POST',
                 body: form
             }).then((response) => {
                 response.text().then((text) => {
                     alert(text);
+                    location.reload();
                 })
             })
         }
@@ -55,18 +56,18 @@
                     <input type="checkbox" id="checkbox_toggle" />
                     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
                     <div class="menu">
-                        <li><a href="index.php">Home</a></li>
-                        <li><a href="index.php#Idea">Idea</a></li>
-                        <li><a href="index.php#About">About Us</a></li>
+                        <li><a href="/index.html">Home</a></li>
+                        <li><a href="/index.html#Idea">Idea</a></li>
+                        <li><a href="/index.html#About">About Us</a></li>
                         <li class="services">
                             <a>Recipes</a>
                             <ul class="dropdown1">
-                                <li><a href="Mexican_page.html">Mexican</a></li>
-                                <li><a href="Italian_page.html">Italian</a></li>
-                                <li><a href="Israeli_page.html">Israeli</a></li>
+                                <li><a href="/HTML/Mexican_page.html">Mexican</a></li>
+                                <li><a href="/HTML/Italian_page.html">Italian</a></li>
+                                <li><a href="/HTML/Israeli_page.html">Israeli</a></li>
                             </ul>
                         </li>
-                        <li><a href="Tips_page.html">Tips</a></li>
+                        <li><a href="/HTML/Tips_page.html">Tips</a></li>
                     </div>
                 </ul>
             </nav>
@@ -83,7 +84,7 @@
         <div class="container">
             <div class="row rowwidth">
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="images\Tips\workspace.jpg" alt="firstmeal" height="350">
+                    <img class="img-me" src="/images\Tips\workspace.jpg" alt="firstmeal" height="350">
                     <h1>Workspace</h1>
                     <p>Set up your workspace by gathering clean tools, bowls and utensils. And make sure to keep a trashcan within arm’s reach.</p><br>
                     <div class="Ranking_artical special">
@@ -117,7 +118,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" class="btn btn-primary" name="submit" value="sendtip"
+                                        <button type="button" class="btn btn-primary" name="submit" value="sendtip"
                                             onclick='sendform()'>Save Comment</button>
                                     </div>
                                 </div>
@@ -126,7 +127,7 @@
                     </form>
                 </div>
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="images\Tips\Egg Wash.jpg" alt="firstmeal" height="350">
+                    <img class="img-me" src="/images\Tips\Egg Wash.jpg" alt="firstmeal" height="350">
                     <h1>Egg Wash</h1>
                     <p>To create an egg wash, whisk together a large egg with one tablespoon of water until smooth. Use as a glue to seal pastries, then brush on top for a glossy appearance</p><br>
                     <div class="Ranking_artical">
@@ -160,7 +161,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" class="btn btn-primary" name="submit" value="sendtip"
+                                        <button type="button" class="btn btn-primary" name="submit" value="sendtip"
                                             onclick='sendform()'>Save Comment</button>
                                     </div>
                                 </div>
@@ -169,7 +170,7 @@
                     </form>
                 </div>
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="images\Tips\Peel Tomatoes1.jpg" alt="firstmeal" height="350">
+                    <img class="img-me" src="/images\Tips\Peel Tomatoes1.jpg" alt="firstmeal" height="350">
                     <h1>Peel Tomatoes</h1>
                     <p>Peel tomatoes with ease! Cut an X in the top, and then simmer in a pot of hot water for 15 to 30 seconds. Cool down and the skin will fall right off.</p><br>
                     <div class="Ranking_artical">
@@ -203,7 +204,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" class="btn btn-primary" name="submit" value="sendtip"
+                                        <button type="button" class="btn btn-primary" name="submit" value="sendtip"
                                             onclick='sendform()'>Save Comment</button>
                                     </div>
                                 </div>
@@ -214,7 +215,7 @@
             </div>
             <div class="row rowwidth">
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="images\Tips\Plan and Clean.jpg" alt="firstmeal" height="350">
+                    <img class="img-me" src="/images\Tips\Plan and Clean.jpg" alt="firstmeal" height="350">
                     <h1>Plan and Clean</h1>
                     <p>Always read and re-read your recipes before you start cooking. Clean as you go.</p><br>
                     <div class="Ranking_artical special">
@@ -248,7 +249,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" class="btn btn-primary" name="submit" value="sendtip"
+                                        <button type="button" class="btn btn-primary" name="submit" value="sendtip"
                                             onclick='sendform()'>Save Comment</button>
                                     </div>
                                 </div>
@@ -257,7 +258,7 @@
                     </form>
                 </div>
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="images\Tips\Butter.jpg" alt="firstmeal" height="350">
+                    <img class="img-me" src="/images\Tips\Butter.jpg" alt="firstmeal" height="350">
                     <h1>Butter</h1>
                     <p>To prevent butter from over-browning in your pan, add a little bit of lemon juice.</p><br>
                     <div class="Ranking_artical special">
@@ -291,7 +292,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" class="btn btn-primary" name="submit" value="sendtip"
+                                        <button type="button" class="btn btn-primary" name="submit" value="sendtip"
                                             onclick='sendform()'>Save Comment</button>
                                     </div>
                                 </div>
@@ -300,7 +301,7 @@
                     </form>
                 </div>
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="images\Tips\SALT.jpg" alt="firstmeal" height="350">
+                    <img class="img-me" src="/images\Tips\SALT.jpg" alt="firstmeal" height="350">
                     <h1>SALT</h1>
                     <p>Embrace salt. Don’t be afraid to use salt; it pulls the flavors out of your dishes. Cook with kosher salt and season with sea salt.</p><br>
                     <div class="Ranking_artical">
@@ -334,7 +335,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" class="btn btn-primary" name="submit" value="sendtip"
+                                        <button type="button" class="btn btn-primary" name="submit" value="sendtip"
                                             onclick='sendform()'>Save Comment</button>
                                     </div>
                                 </div>
@@ -343,9 +344,9 @@
                     </form>
                 </div>
             </div>
-            <div class="row rowwidth">
+            <div class="row rowwidth last">
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="images\Tips\Spices.jpg" alt="firstmeal" height="350">
+                    <img class="img-me" src="/images\Tips\Spices.jpg" alt="firstmeal" height="350">
                     <h1>Spices</h1>
                     <p>Keep your spices away from sources of heat like the stove or lights. Herbs and spices can lose their flavor when exposed to humidity and heat.</p><br>
                     <div class="Ranking_artical">
@@ -379,7 +380,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" class="btn btn-primary" name="submit" value="sendtip"
+                                        <button type="button" class="btn btn-primary" name="submit" value="sendtip"
                                             onclick='sendform()'>Save Comment</button>
                                     </div>
                                 </div>
@@ -388,7 +389,7 @@
                     </form>
                 </div>
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="images\Tips\Onion.jpg" alt="firstmeal" height="350">
+                    <img class="img-me" src="/images\Tips\Onion.jpg" alt="firstmeal" height="350">
                     <h1>Onion</h1>
                     <p>To prevent tears, cut off the root of the onion before you slice.</p><br>
                     <div class="Ranking_artical special">
@@ -422,7 +423,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" class="btn btn-primary" name="submit" value="sendtip"
+                                        <button type="button" class="btn btn-primary" name="submit" value="sendtip"
                                             onclick='sendform()'>Save Comment</button>
                                     </div>
                                 </div>
@@ -431,7 +432,7 @@
                     </form>
                 </div>
                 <div class="col-lg-4 col-md-12 column">
-                    <img class="img-me" src="images\Tips\Honey1.jpg" alt="firstmeal" height="350">
+                    <img class="img-me" src="/images\Tips\Honey1.jpg" alt="firstmeal" height="350">
                     <h1>Honey</h1>
                     <p>Honey is a natural preservative and will never spoil.</p><br>
                     <div class="Ranking_artical special">
@@ -465,7 +466,7 @@
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary"
                                             data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" class="btn btn-primary" name="submit" value="sendtip"
+                                        <button type="button" class="btn btn-primary" name="submit" value="sendtip"
                                             onclick='sendform()'>Save Comment</button>
                                     </div>
                                 </div>
