--- a/index.html
+++ b/index.html
@@ -1,56 +1,3 @@
-<?php
-require_once('database.php');
-require_once('products.php');
-require_once('Tips.php');
-//Conncet to DB
-$database = new Database();
-if ($database->get_connection()) {
-    
-} else {
-    die("Connection fails");
-}
-
-if ($_POST['action'] == 'addContent') {
-    if(empty($_POST['FullName'])){
-        echo "FullName cant be empty";
-        die();
-    }
-    if(!filter_var($_POST['Email'], FILTER_VALIDATE_EMAIL)){
-        echo "Please fill in valid email";
-        die();
-    }
-    if((empty($_POST['Subject'])) || (is_numeric($_POST['Subject'])) ){
-        echo 'Please fill in Subject, Subject cant be with Numbers';
-        die();
-    }
-
-    $FullName = $_POST['FullName'];
-    $Email = $_POST['Email'];
-    $Subject = $_POST['Subject'];
-    try {
-        $error = Content::add_content($FullName, $Email, $Subject);
-    } catch (\Throwable $th) {
-        $error = 'Content already exsists.';
-    }
-    if ($error)
-        echo $error;
-}
-else {
-    $Rate = $_POST['Rate'];
-    $TipName = $_POST['TipName'];
-    $Content = $_POST['Content'];
-    $Format = "Y-m-d H:i:s";  
-    $Date=date( $Format);
-    try {
-        $error = Tips::add_tip($TipName,$Rate,$Content,$Date);
-    } 
-    catch (\Throwable $th) {
-        $error = 'Tip already exsists.';
-    }
-    if ($error)
-        echo $error;
-}
-?>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -67,13 +14,14 @@ else {
     <script>
         function sendform() {
             const form = new FormData(document.getElementById('contentForm'));
-            const req = new Request('index.php');
+            const req = new Request('/PHP/index.php');
             fetch(req, {
                 method: 'POST',
                 body: form
             }).then((response)=>{
                 response.text().then((text)=>{
                     alert(text);
+                    location.reload();
                 })
             })
         }
@@ -96,18 +44,18 @@ else {
                     <input type="checkbox" id="checkbox_toggle" />
                     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
                     <div class="menu">
-                        <li><a href="index.php">Home</a></li>
-                        <li><a href="index.php#Idea">Idea</a></li>
-                        <li><a href="index.php#About">About Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html#Idea">Idea</a></li>
+                        <li><a href="index.html#About">About Us</a></li>
                         <li class="services">
                             <a>Recipes</a>
                             <ul class="dropdown1">
-                                <li><a href="Mexican_page.html">Mexican</a></li>
-                                <li><a href="Italian_page.html">Italian</a></li>
-                                <li><a href="Israeli_page.html">Israeli</a></li>
+                                <li><a href="/HTML/Mexican_page.html">Mexican</a></li>
+                                <li><a href="/HTML/Italian_page.html">Italian</a></li>
+                                <li><a href="/HTML/Israeli_page.html">Israeli</a></li>
                             </ul>
                         </li>
-                        <li><a href="Tips_page.html">Tips</a></li>
+                        <li><a href="/HTML/Tips_page.html">Tips</a></li>
                     </div>
                 </ul>
             </nav>
@@ -134,11 +82,11 @@ else {
                     </div>
                     <h5 class="center">See The Master's in action</h5>
                     <video width="500" height="340" autoplay loop class="centerAudio">
-                        <source src="images\videoplayback.mp4" type="video/mp4">
+                        <source src="/images\videoplayback.mp4" type="video/mp4">
                       </video>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
-                    <img class="img-me" src="images\Swiss House _ سويس هاوس.jpg">
+                    <img class="img-me" src="/images\Swiss House _ سويس هاوس.jpg">
                 </div>
             </div>
         </div>
@@ -230,18 +178,3 @@ else {
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
