--- a/index.html
+++ b/index.html
@@ -11,20 +11,47 @@
     <link rel="stylesheet" href="CSS\style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/82bc52e7cb.js" crossorigin="anonymous"></script>
-    <script>
-        function sendform() {
-            const form = new FormData(document.getElementById('contentForm'));
-            const req = new Request('/PHP/index.php');
-            fetch(req, {
-                method: 'POST',
-                body: form
-            }).then((response)=>{
-                response.text().then((text)=>{
-                    alert(text);
-                    location.reload();
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script>
+            function sendform() {
+                const form = new FormData(document.getElementById('contentForm'));
+                const req = new Request('/PHP/index.php');
+                fetch(req, {
+                    method: 'POST',
+                    body: form
+                }).then((response)=>{
+                    response.text().then((text)=>{
+                        alert(text);
+                        location.reload();
+                    })
                 })
-            })
-        }
+            }
+
+            window.onload = function(){
+
+            var x = document.getElementById("first");
+            var y = document.getElementById("first1");
+            var z = document.getElementById("first2");
+            x.style.color = "black";
+            y.style.color = "black";
+            z.style.color = "black";
+
+            function changeColor(){
+                if (x.style.color == "black"){
+                    x.style.color = "red";
+                    y.style.color = "red";
+                    z.style.color = "red";
+                }
+                else if (x.style.color == "red"){
+                    x.style.color = "black";
+                    y.style.color = "black";
+                    z.style.color = "black";
+                }
+            };
+            window.setInterval(changeColor,1000);
+            };
+
+</script>
     </script>
 </head>
 
@@ -44,9 +71,9 @@
                     <input type="checkbox" id="checkbox_toggle" />
                     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
                     <div class="menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html#Idea">Idea</a></li>
-                        <li><a href="index.html#About">About Us</a></li>
+                        <li><a  href="index.html">Home</a></li>
+                        <li><a  href="index.html#Idea">Idea</a></li>
+                        <li><a  href="index.html#About">About Us</a></li>
                         <li class="services">
                             <a>Recipes</a>
                             <ul class="dropdown1">
@@ -70,8 +97,8 @@
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                     <div class="img-me center">
-                        <h1>The Master's</h1>
-                        <h5>Leading To Tastier World</h5>
+                        <h1 id="first">The Master's</h1>
+                        <h5 id="first1">Leading To Tastier World</h5>
                         <a href="#Idea"><button class="btn">Learn More </button></a>
                         <div class="arrow">
                             <span></span>
@@ -80,7 +107,7 @@
 
                         </div>
                     </div>
-                    <h5 class="center">See The Master's in action</h5>
+                    <h5 class="center" id="first2">See The Master's in action</h5>
                     <video width="500" height="340" autoplay loop class="centerAudio">
                         <source src="/images\videoplayback.mp4" type="video/mp4">
                       </video>
