--- a/index.html
+++ b/index.html
@@ -12,47 +12,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/82bc52e7cb.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script>
-            function sendform() {
-                const form = new FormData(document.getElementById('contentForm'));
-                const req = new Request('/PHP/index.php');
-                fetch(req, {
-                    method: 'POST',
-                    body: form
-                }).then((response)=>{
-                    response.text().then((text)=>{
-                        alert(text);
-                        location.reload();
-                    })
-                })
-            }
 
-            window.onload = function(){
+       <script src="js\java.js"></script>
 
-            var x = document.getElementById("first");
-            var y = document.getElementById("first1");
-            var z = document.getElementById("first2");
-            x.style.color = "black";
-            y.style.color = "black";
-            z.style.color = "black";
-
-            function changeColor(){
-                if (x.style.color == "black"){
-                    x.style.color = "red";
-                    y.style.color = "red";
-                    z.style.color = "red";
-                }
-                else if (x.style.color == "red"){
-                    x.style.color = "black";
-                    y.style.color = "black";
-                    z.style.color = "black";
-                }
-            };
-            window.setInterval(changeColor,1000);
-            };
-
-</script>
-    </script>
 </head>
 
 
@@ -62,27 +24,27 @@
             <nav class="navbar fixed-top">
                 <div class="col-xl-2 col-md-2 logo">Master's</div>
                 <div class="col-xl-4 iconbar">
-                    <a href="www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="www.instergram.com"><i class="fa-brands fa-instagram-square"></i></a>
+                    <a href="https://www.facebook.com/groups/hungryinyourhunger/"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="https://instagram.com/revimbiravcha?igshid=YmMyMTA2M2Y="><i class="fa-brands fa-instagram-square"></i></a>
                     <a href="mailto:tomer233@hotmail.com"><i class="fa-solid fa-envelope"></i></a>
-                    <a href="www.youtube.com"><i class="fa-brands fa-youtube"></i></i></a>
+                    <a href="https://www.youtube.com/c/TheCookingFoodieIsrael"><i class="fa-brands fa-youtube"></i></i></a>
                 </div>
                 <ul class="col-xl-6 col-md-8 nav-links">
                     <input type="checkbox" id="checkbox_toggle" />
                     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
                     <div class="menu">
-                        <li><a  href="index.html">Home</a></li>
-                        <li><a  href="index.html#Idea">Idea</a></li>
-                        <li><a  href="index.html#About">About Us</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html#Idea">Idea</a></li>
+                        <li><a href="index.html#About">About Us</a></li>
                         <li class="services">
                             <a>Recipes</a>
                             <ul class="dropdown1">
-                                <li><a href="/HTML/Mexican_page.html">Mexican</a></li>
-                                <li><a href="/HTML/Italian_page.html">Italian</a></li>
-                                <li><a href="/HTML/Israeli_page.html">Israeli</a></li>
+                                <li><a href="/includes/Mexican_page.html">Mexican</a></li>
+                                <li><a href="/includes/Italian_page.html">Italian</a></li>
+                                <li><a href="/includes/Israeli_page.html">Israeli</a></li>
                             </ul>
                         </li>
-                        <li><a href="/HTML/Tips_page.html">Tips</a></li>
+                        <li><a href="/includes/Tips_page.html">Tips</a></li>
                     </div>
                 </ul>
             </nav>
